<resources>
    <string name="app_name">WakeMeUp</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_friends">Friends</string>
    <string name="title_rooms">Rooms</string>
    <string name="signup">Registration</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signupButton">Sign up</string>
    <string name="proceedToLogin">Already have an account?</string>
    <string name="loginButton">Log in!</string>
    <string name="loginText">Login</string>
    <string name="loginButton_loginFragment">Log in</string>
    <string name="proceedToSignup">Don\'t have an account yet?</string>
    <string name="change_theme">Change theme</string>
    <string name="log_out">log out</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="unique_room_id">Unique room ID</string>
    <string name="e_mail">E-mail</string>
    <string name="someone_example_ie">someone@example.ie</string>
    <string name="create_room">Create room</string>
    <string name="isPrivate">Private</string>
    <string name="id">ID</string>
    <string name="enter_room_s_id_to_join">Enter room\'s ID to join</string>
    <string name="ok">OK</string>
    <string name="sorry_but_this_room_is_private_please_ask_room_owner_to_send_you_an_invitation_link">Sorry, but this room is private. Please, ask room owner to send you an invitation link.</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="members">Members</string>
</resources>