<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/authenticationViewPagerFragment">

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.example.wakemeup.ui.alarms.AlarmsFragment"
        android:label="@string/title_alarms"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.wakemeup.ui.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_navigation_friends_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.example.wakemeup.ui.rooms.RoomsFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_rooms" />
    <fragment
        android:id="@+id/authenticationViewPagerFragment"
        android:name="com.example.wakemeup.ui.authentication.AuthenticationViewPagerFragment"
        android:label="fragment_authentication_view_pager"
        tools:layout="@layout/fragment_authentication_view_pager" >
        <action
            android:id="@+id/action_authenticationViewPagerFragment_to_navigation_friends"
            app:destination="@id/navigation_friends" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.wakemeup.ui.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>