<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottom_sheet_drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Choose an image -->
    <TextView
        android:id="@+id/choose_avatar_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/choose_an_image"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/room_avatar_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/room_avatar_image_view" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/room_avatar_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/open_eye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_drag_handle"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <!-- Room name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_avatar_image_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/room_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- unique room id -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_id_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_name_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/room_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unique_room_id" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Create room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_id_text_input_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>